--- a/style.css
+++ b/style.css
@@ -26,7 +26,13 @@ body {
   grid-template-rows: repeat(3, 1fr);
   grid-row-gap: 10px;
 }
-/* Todos */
+.prompt > p, input {
+  text-align: center;
+}
+.prompt > button {
+  justify-self: center;
+}
+/* Todo - Main */
 
 
 /* Utilities */
@@ -46,4 +52,7 @@ body {
   left: 0;
   width: 100%;
   border: 1px solid black; /*Coloring*/
+}
+i {
+  font-size: 2rem;
 }
