--- a/style.css
+++ b/style.css
@@ -102,7 +102,6 @@ main > input {
   padding: 5px 10px;
   font-weight: bold;
 }
-
 /* Utilities */
 .noDisplay {
   display: none;
@@ -112,6 +111,7 @@ main > input {
 }
 .strike {
   position: relative;
+  color: grey;
 }
 .strike::after {
   position: absolute;
@@ -119,7 +119,7 @@ main > input {
   top: 50%;
   left: 0;
   width: 100%;
-  border: 1px solid black; /*Coloring*/
+  border: 1px solid grey;
 }
 i {
   font-size: 2rem;
