--- a/style.css
+++ b/style.css
@@ -21,7 +21,10 @@ body {
 
   background-color: var(--background);
 }
-/* Prompt */
+
+/* ------------------------------------------------------------------------- */
+/* PROMPT ------------------------------------------------------------------ */
+/* ------------------------------------------------------------------------- */
 .prompt {
   background-color: var(--offset);
   border-radius: 5px;
@@ -54,7 +57,10 @@ body {
 .prompt > input:focus {
   box-shadow: 0 0 3px var(--accent);
 }
-/* Todo - Main */
+
+/* ------------------------------------------------------------------------- */
+/* MAIN - TODO ------------------------------------------------------------- */
+/* ------------------------------------------------------------------------- */
 main {
   background-color: var(--offset);
   border-radius: 5px;
@@ -62,16 +68,31 @@ main {
   box-shadow: 0 0 2px var(--offset1);
 
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-rows: auto;
-  grid-row-gap: 1rem;
+  grid-row-gap: 1em;
+  grid-column-gap: 2em;
 }
-main > h1, span {
+main > h1 {
+  grid-column: 1 / 3;
   text-align: center;
-  font-size: 2rem;
-  font-weight: 300;
 }
-main > .list > .list-item {
+main > #js-start {
+  grid-column: 1 / 2;
+  background-color: lightblue;
+}
+main > #js-end {
+  grid-column: 2 / 3;
+  background-color: grey;
+}
+main > div > input {
+  background-color: var(--background);
+  border: 1px solid var(--accent);
+  border-radius: 5px;
+  padding: .5em 1em;
+  font-weight: bold;
+}
+/* main > .list > .list-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -94,15 +115,13 @@ main > .list > div > i:nth-child(3) {
 }
 main > .list > div > i:nth-child(3):hover {
   color: green;
-}
-main > input {
-  background-color: var(--background);
-  border: 1px solid var(--accent);
-  border-radius: 5px;
-  padding: 5px 10px;
-  font-weight: bold;
-}
-/* Utilities */
+} */
+
+
+
+/* ------------------------------------------------------------------------- */
+/* UTILITIES --------------------------------------------------------------- */
+/* ------------------------------------------------------------------------- */
 .noDisplay {
   display: none;
 }
@@ -121,8 +140,8 @@ main > input {
   width: 100%;
   border: 1px solid grey;
 }
-i {
-  font-size: 2rem;
+span {
+  font-size: 1.5rem;
 }
 button {
   border: none;
@@ -132,4 +151,7 @@ button {
 }
 button:hover {
   color: var(--offset1);
+}
+.visible {
+  visibility: hidden;
 }
