--- a/style.css
+++ b/style.css
@@ -34,28 +34,36 @@ body {
   display: grid;
   grid-template-columns: 1fr;
   grid-template-rows: repeat(3, 1fr);
-  grid-row-gap: 1rem;
-}
-.prompt > p {
-  font-size: 2.5rem;
-  font-weight: 300;
+  grid-row-gap: 1.5rem;
 }
 .prompt > p, input {
   text-align: center;
   align-self: center;
 }
-.prompt > button {
-  justify-self: center;
+.prompt > p {
+  font-size: 2.5rem;
+  font-weight: 300;
 }
-.prompt > input {
+.prompt > form {
+  display: flex;
+  align-content: center;
+}
+.prompt > form > input {
   background-color: var(--background);
   border: 1px solid var(--accent);
   border-radius: 5px;
   padding: 1em 3em;
   font-weight: bold;
 }
-.prompt > input:focus {
-  box-shadow: 0 0 3px var(--accent);
+.prompt > form > input:focus {
+  box-shadow: 0 0 2px var(--accent);
+}
+.prompt > form > button {
+  padding-left: 1em;
+  justify-self: center;
+}
+.prompt > form > button > i {
+  font-size: 2em;
 }
 
 /* ------------------------------------------------------------------------- */
@@ -140,7 +148,7 @@ main > .list > div > i:nth-child(3):hover {
   width: 100%;
   border: 1px solid grey;
 }
-span {
+i {
   font-size: 1.5rem;
 }
 button {
