--- a/style.css
+++ b/style.css
@@ -28,12 +28,12 @@ body {
 .prompt {
   background-color: var(--offset);
   border-radius: 5px;
-  padding: 2rem;
+  padding: 2rem 3em;
   box-shadow: 0 0 2px var(--offset1);
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
   grid-row-gap: 1.5rem;
 }
 .prompt > p, input {
