--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 /* Basic Setup */
 :root {
-  --background: #bfd7b5;
-  --offset: #e7efc5;
-  --accent: #413c58;
-  --offset1: #302c41;
+  --background: #153243;
+  --offset: #284B63;
+
+  --accent: #F4F9E9;
+  --offsetAccent: #B4B8AB;
+
+  --text: #EEF0EB;
+
+  --alert: #B33951;
 }
 * {
   padding: 0;
@@ -12,6 +17,8 @@
 
   font-size: 16px;
   font-family: 'Roboto', sans-serif;
+
+  color: var(--text);
 }
 body {
   height: 100vh;
@@ -29,7 +36,7 @@ body {
   background-color: var(--offset);
   border-radius: 5px;
   padding: 2rem 3em;
-  box-shadow: 0 0 2px var(--offset1);
+  box-shadow: 0 0 2px var(--offsetAccent);
 
   display: grid;
   grid-template-columns: 1fr;
@@ -50,7 +57,7 @@ body {
 }
 .prompt > form > input {
   background-color: var(--background);
-  border: 1px solid var(--accent);
+  border: 1px solid var(--offsetAccent);
   border-radius: 5px;
   padding: 1em 3em;
   font-weight: bold;
@@ -63,17 +70,23 @@ body {
   justify-self: center;
 }
 .prompt > form > button > i {
+  color: var(--offsetAccent);
   font-size: 2em;
+
+  transition: 200ms;
+}
+.prompt > form > button > i:hover {
+  color: var(--accent);
 }
 
 /* ------------------------------------------------------------------------- */
 /* MAIN - TODO ------------------------------------------------------------- */
 /* ------------------------------------------------------------------------- */
 main {
-  background-color: var(--offset);
-  border-radius: 5px;
-  padding: 2rem 4rem;
-  box-shadow: 0 0 2px var(--offset1);
+  /* background-color: var(--offset); */
+  /* border-radius: 5px; */
+  /* padding: 2rem 4rem; */
+  /* box-shadow: 0 0 2px var(--offset1); */
 
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -85,48 +98,78 @@ main > h1 {
   grid-column: 1 / 3;
   text-align: center;
 }
+main > #js-start, #js-end {
+  padding: 1em 2em;
+  border-radius: 2px;
+}
 main > #js-start {
-  min-height: 100px;
+  background-color: var(--offset);
+  min-height: 100px; /*TESTING*/
   grid-column: 1 / 2;
-  background-color: lightblue;
 }
 main > #js-end {
+  background-color: var(--offset);
   grid-column: 2 / 3;
-  background-color: grey;
+}
+main > div > .title {
+  border-bottom: 2px solid var(--accent);
+  margin-bottom: 1em;
+}
+main > .group4 {
+  display: flex;
+  align-items: center;
 }
 main > div > input {
-  background-color: var(--background);
-  border: 1px solid var(--accent);
+  background-color: var(--offset);
+  border: 1px solid var(--offsetAccent);
   border-radius: 5px;
   padding: .5em 1em;
   font-weight: bold;
 }
-/* main > .list > .list-item {
+main > div > input:focus {
+  box-shadow: 0 0 2px var(--accent);
+}
+main > div > button {
+  background-color: transparent;
+  padding-left: .5em;
+}
+main > div > button > i {
+  color: var(--offsetAccent);
+  transition: 200ms;
+}
+main > div > button > i:hover {
+  color: var(--accent);
+}
+/* listItem */
+main > #js-start > .list-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 5px;
+  padding: .5em 0;
+  cursor: grab;
 }
-main > .list > div > i {
-  cursor: pointer;
+main > #js-start > .list-item:hover {
+  border-bottom: 2px solid var(--background);
 }
-main > .list > div > i:nth-child(1) {
+/* Children of list-item */
+main > #js-start > .list-item > span:nth-child(1) {
+  display: none;
+}
+main > #js-start > .list-item:hover span:nth-child(1) {
   font-size: 1rem;
-  color: red;
+  color: var(--alert);
+  cursor: pointer;
+  width: 10px;
+  height: 100%;
+  display: inline-block;
 }
-main > .list > div > p {
-  margin: 0 8px 0 8px;
+main > #js-start > .list-item > p {
+  margin: 0 .8em;
   flex: 1;
 }
-main > .list > div > i:nth-child(3) {
-  font-size: 1.5rem;
-  color: grey;
+main > #js-start > .list-item > span:nth-child(3) {
+  display: none;
 }
-main > .list > div > i:nth-child(3):hover {
-  color: green;
-} */
-
-
 
 /* ------------------------------------------------------------------------- */
 /* UTILITIES --------------------------------------------------------------- */
