--- a/style.css
+++ b/style.css
@@ -86,7 +86,7 @@ body {
 main {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: repeat(4, auto);
   grid-row-gap: 1em;
   grid-column-gap: 2em;
 }
@@ -122,6 +122,8 @@ main > div > .title {
 main > .group4 {
   display: flex;
   align-items: center;
+
+  grid-row: 4 / 5;
 }
 main > div > input {
   background-color: var(--offset);
@@ -220,6 +222,8 @@ main > #js-end > .list-item > span:nth-child(3) {
   font-size: 1.2rem;
   border: 1px solid var(--offsetAccent);
   color: var(--offsetAccent);
+
+  grid-row: 4 / 5;
 }
 #js-reset:hover {
   border: 1px solid var(--text);
